--- a/core-java-modules/pom.xml
+++ b/core-java-modules/pom.xml
@@ -130,7 +130,7 @@
         <!-- <module>core-java-time-measurements</module> --> <!-- We haven't upgraded to java 9. Fixing in BAEL-10841 -->
 
         <!-- <module>multimodulemavenproject</module> --> <!-- We haven't upgraded to java 9. Fixing in BAEL-10841 -->
-        <module>pre-jpms</module>
+        <!-- <module>pre-jpms</module>  ns 21.05.2020-->
     </modules>
 
     <build>
